--- a/book/templates/book_list.html
+++ b/book/templates/book_list.html
@@ -4,13 +4,7 @@
 
 {% block content %}
 <div class="flex flex-col">
-    <nav class="bg-neutral-600 p-8 rounded-b-xl flex justify-between items-center">
-        <a href="/" class="text-4xl font-black text-[#236bf1]">Better<span class="text-[#ec2f3f]">Reads</span></a>
-        
-        <!-- Add the new text in the middle of the navbar -->
-        <div class="text-4xl text-[#236bf1] font-black text-center">List of <span class="text-[#ec2f3f]">Our Books</span></div>
-    </nav>
-
+    {% include 'navbar.html' %}
     <div class="grid grid-cols-5 gap-4 px-12">
         {% for book in books %}
         <div class="mb-4 aspect-w-2 aspect-h-3 m-2">
