--- a/buy/templates/buy.html
+++ b/buy/templates/buy.html
@@ -1,17 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="flex flex-col w-screen h-screen">
-    <nav class=" bg-neutral-600 px-8 py-6 rounded-b-xl grid grid-cols-3 justify-between items-center">
-        <a href="/" class="text-4xl font-black text-[#236bf1]">Better<span class="text-[#ec2f3f]">Reads</span></a>
-        <div class="flex flex-col justify-center items-center">
-            <p class="text-4xl font-black text-[#111111]" style="align-items: center;">Cart</p>
-        </div>
-        <div class="flex flex-col justify-center items-end">
-            <p class="text-2xl font-bold">Hello, <a href="/user/profile/">{{ user.username }}</a>!</p>
-            <a href="/auth/logout/">Logout</a>
-        </div>
-    </nav>
+<div class="flex flex-col w-screen h-screen gap-8">
+    {% include 'navbar.html' %}
     <table class="table-auto" id="blog-container">
         <tr>
         <th>
