--- a/buy/templates/buy_product.html
+++ b/buy/templates/buy_product.html
@@ -1,15 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="flex flex-col w-screen h-screen">
-    <nav class=" bg-neutral-600 px-8 py-6 rounded-b-xl grid grid-cols-3 justify-between items-center">
-        <a href="/" class="text-4xl font-black text-[#236bf1]">Better<span class="text-[#ec2f3f]">Reads</span></a>
-        <input class="bg-neutral-500 rounded-xl">
-        <div class="flex flex-col justify-center items-end">
-            <p class="text-2xl font-bold">Hello, <a href="/user/profile/">{{ user.username }}</a>!</p>
-            <a href="/auth/logout/">Logout</a>
-        </div>
-    </nav>
+<div class="flex flex-col w-screen h-screen gap-8">
+    {% include 'navbar.html' %}
     <div class="flex items-center justify-center w-full h-full">
         <div class="flex flex-col justify-center items-center bg-neutral-100 p-8 rounded-xl shadow-lg">
             <h1 class="text-4xl font-black text-[#236bf1]">Checkout Succesful!</h1>
