--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -2,14 +2,7 @@
 
 {% block content %}
 <div class="flex flex-col">
-    <nav class=" bg-neutral-600 px-8 py-6 rounded-b-xl grid grid-cols-3 justify-between items-center">
-        <a href="/" class="text-4xl font-black text-[#236bf1]">Better<span class="text-[#ec2f3f]">Reads</span></a>
-        <input class="bg-neutral-500 rounded-xl">
-        <div class="flex flex-col justify-center items-end">
-            <p class="text-2xl font-bold">Hello, <a href="/user/profile">{{ user.username }}</a>!</p>
-            <a href="/auth/logout/">Logout</a>
-        </div>
-    </nav>
+   {% include 'navbar.html' %}
     <div class="flex flex-col gap-16 p-16 w-full h-full">
         <h1 class="text-5xl font-bold">User Profile</h1>
 
@@ -28,6 +21,11 @@
                     {% endif %}
                 </div>
                 <p class="text-xl">Joined on {{ join_date }}</p>
+                {% if user == user_profile %}
+                <div>
+                    <a href="edit"><button class="bg-[#236bf1] px-8 py-2 rounded-full text-xl">Edit Profile</button></a>
+                </div>
+                {% endif %}
             </div>
         </div>
         <div class="flex justify-center items-center gap-8">
@@ -40,10 +38,10 @@
                 {% for review in top_reviews %}
                 <div class="{% if forloop.counter == 1 %} bg-amber-500 {% elif forloop.counter == 2 %} bg-gray-400 {% elif forloop.counter == 3 %} bg-amber-900 {% else %} bg-neutral-600 {% endif %} grid grid-cols-5 justify-between items-center px-16 py-8 rounded-xl w-2/3">
                     <h2 class="text-3xl font-bold justify-self-start">#{{ forloop.counter }}</h2>
-                    <div class="col-span-3">
+                    <a href="/book/{{review.book.pk}}" class="col-span-3">
                         <p class="text-xl font-bold">{{review.book.title}}</p>
                         <p>by {{review.book.author}}</p>
-                    </div>
+                    </a>
                     <p class="text-3xl font-bold justify-self-end">{{review.rating}}<span class="text-xl font-normal">/5.0</span></p>
                 </div>
                 {% endfor %}
