--- a/buy/templates/navbar.html
+++ b/buy/templates/navbar.html
@@ -42,7 +42,7 @@
          </span>
     </a>
     <div class="flex flex-col justify-center items-center pl-10 pr-5">
-        <a href="/auth/logout">Logout</a>
+        <a href="/auth/logout/">Logout</a>
      </div>
     <div class="flex flex-col justify-center items-end pr-12">
         <a href="/user/profile/" class="text-1xl font-bold">{{ user.username }}</a>
