change success message to green

--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -23,7 +23,7 @@
                 {% if messages %}
                     {% for message in messages %}
                         {% if 'success' in message %}
-                            <div class="bg-[#ec2f3f] text-white text-xl font-bold p-4 rounded-lg">
+                            <div class="bg-green-500 text-white text-xl font-bold p-4 rounded-lg">
                                 {{ message }}
                             </div>
                         {% else %}
